Feat(redirect): api now redirects upon short url given to long url
